--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
-  "name": "timestamp",
+  "name": "timestamp-service",
   "version": "1.0.0",
-  "description": "",
+  "description": "A timestamp service for Freecodecamp challenge.",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Manuel Krebber <admin@wheerd.de>",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.15.3",
+    "moment": "^2.18.1"
+  }
 }
